--- a/notebooks/01_data_preparation.ipynb
+++ b/notebooks/01_data_preparation.ipynb
@@ -1017,6 +1017,347 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "a63ebf06-f1eb-41f2-a074-5c845dfa32a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>UBIGEO</th>\n",
+       "      <th>CCDD</th>\n",
+       "      <th>CCPP</th>\n",
+       "      <th>CCDI</th>\n",
+       "      <th>DEPARTAMEN</th>\n",
+       "      <th>PROVINCIA</th>\n",
+       "      <th>DISTRITO</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>ESRI_OID</th>\n",
+       "      <th>GEOMETRY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>010101</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>AMAZONAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>POLYGON ((-77.8858 -6.1778, -77.88323 -6.17846...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>010102</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>02</td>\n",
+       "      <td>AMAZONAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>ASUNCION</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>POLYGON ((-77.74482 -5.94497, -77.74482 -5.945...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>010103</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>03</td>\n",
+       "      <td>AMAZONAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>BALSAS</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>POLYGON ((-77.9358 -6.69039, -77.93531 -6.6909...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>010104</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>04</td>\n",
+       "      <td>AMAZONAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>CHETO</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>POLYGON ((-77.71486 -6.24598, -77.71485 -6.245...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>010105</td>\n",
+       "      <td>01</td>\n",
+       "      <td>01</td>\n",
+       "      <td>05</td>\n",
+       "      <td>AMAZONAS</td>\n",
+       "      <td>CHACHAPOYAS</td>\n",
+       "      <td>CHILIQUIN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>POLYGON ((-77.77405 -5.99598, -77.77328 -5.996...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1886</th>\n",
+       "      <td>250304</td>\n",
+       "      <td>25</td>\n",
+       "      <td>03</td>\n",
+       "      <td>04</td>\n",
+       "      <td>UCAYALI</td>\n",
+       "      <td>PADRE ABAD</td>\n",
+       "      <td>NESHUYA</td>\n",
+       "      <td>1887.0</td>\n",
+       "      <td>1887.0</td>\n",
+       "      <td>POLYGON ((-75.01663 -8.44514, -75.0165 -8.4453...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1887</th>\n",
+       "      <td>250305</td>\n",
+       "      <td>25</td>\n",
+       "      <td>03</td>\n",
+       "      <td>05</td>\n",
+       "      <td>UCAYALI</td>\n",
+       "      <td>PADRE ABAD</td>\n",
+       "      <td>ALEXANDER VON HUMBOLDT</td>\n",
+       "      <td>1888.0</td>\n",
+       "      <td>1888.0</td>\n",
+       "      <td>POLYGON ((-75.02136 -8.73948, -75.02136 -8.739...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1888</th>\n",
+       "      <td>250306</td>\n",
+       "      <td>25</td>\n",
+       "      <td>03</td>\n",
+       "      <td>06</td>\n",
+       "      <td>UCAYALI</td>\n",
+       "      <td>PADRE ABAD</td>\n",
+       "      <td>HUIPOCA</td>\n",
+       "      <td>1889.0</td>\n",
+       "      <td>1889.0</td>\n",
+       "      <td>POLYGON ((-75.3844 -8.58229, -75.38423 -8.5825...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>250307</td>\n",
+       "      <td>25</td>\n",
+       "      <td>03</td>\n",
+       "      <td>07</td>\n",
+       "      <td>UCAYALI</td>\n",
+       "      <td>PADRE ABAD</td>\n",
+       "      <td>BOQUERON</td>\n",
+       "      <td>1890.0</td>\n",
+       "      <td>1890.0</td>\n",
+       "      <td>POLYGON ((-75.77583 -8.91013, -75.77427 -8.910...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1890</th>\n",
+       "      <td>250401</td>\n",
+       "      <td>25</td>\n",
+       "      <td>04</td>\n",
+       "      <td>01</td>\n",
+       "      <td>UCAYALI</td>\n",
+       "      <td>PURUS</td>\n",
+       "      <td>PURUS</td>\n",
+       "      <td>1891.0</td>\n",
+       "      <td>1891.0</td>\n",
+       "      <td>POLYGON ((-70.50641 -9.42392, -70.50643 -9.424...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1891 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      UBIGEO CCDD CCPP CCDI DEPARTAMEN    PROVINCIA                DISTRITO  \\\n",
+       "0     010101   01   01   01   AMAZONAS  CHACHAPOYAS             CHACHAPOYAS   \n",
+       "1     010102   01   01   02   AMAZONAS  CHACHAPOYAS                ASUNCION   \n",
+       "2     010103   01   01   03   AMAZONAS  CHACHAPOYAS                  BALSAS   \n",
+       "3     010104   01   01   04   AMAZONAS  CHACHAPOYAS                   CHETO   \n",
+       "4     010105   01   01   05   AMAZONAS  CHACHAPOYAS               CHILIQUIN   \n",
+       "...      ...  ...  ...  ...        ...          ...                     ...   \n",
+       "1886  250304   25   03   04    UCAYALI   PADRE ABAD                 NESHUYA   \n",
+       "1887  250305   25   03   05    UCAYALI   PADRE ABAD  ALEXANDER VON HUMBOLDT   \n",
+       "1888  250306   25   03   06    UCAYALI   PADRE ABAD                 HUIPOCA   \n",
+       "1889  250307   25   03   07    UCAYALI   PADRE ABAD                BOQUERON   \n",
+       "1890  250401   25   04   01    UCAYALI        PURUS                   PURUS   \n",
+       "\n",
+       "      OBJECTID  ESRI_OID                                           GEOMETRY  \n",
+       "0          1.0       1.0  POLYGON ((-77.8858 -6.1778, -77.88323 -6.17846...  \n",
+       "1          2.0       2.0  POLYGON ((-77.74482 -5.94497, -77.74482 -5.945...  \n",
+       "2          3.0       3.0  POLYGON ((-77.9358 -6.69039, -77.93531 -6.6909...  \n",
+       "3          4.0       4.0  POLYGON ((-77.71486 -6.24598, -77.71485 -6.245...  \n",
+       "4          5.0       5.0  POLYGON ((-77.77405 -5.99598, -77.77328 -5.996...  \n",
+       "...        ...       ...                                                ...  \n",
+       "1886    1887.0    1887.0  POLYGON ((-75.01663 -8.44514, -75.0165 -8.4453...  \n",
+       "1887    1888.0    1888.0  POLYGON ((-75.02136 -8.73948, -75.02136 -8.739...  \n",
+       "1888    1889.0    1889.0  POLYGON ((-75.3844 -8.58229, -75.38423 -8.5825...  \n",
+       "1889    1890.0    1890.0  POLYGON ((-75.77583 -8.91013, -75.77427 -8.910...  \n",
+       "1890    1891.0    1891.0  POLYGON ((-70.50641 -9.42392, -70.50643 -9.424...  \n",
+       "\n",
+       "[1891 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "da0e3f28-5a39-4e40-9d59-42c6d62bc9df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Geometría de Perú generada\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'tmin_clip_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[55]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     18\u001b[39m tmin_dist_path = \u001b[33m\"\u001b[39m\u001b[33mdata/processed/tmin_dist_clip.tif\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     19\u001b[39m tmin_dist.rio.to_raster(tmin_dist_path)\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m✅ Raster recortado guardado en: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mtmin_clip_path\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mDimensiones:\u001b[39m\u001b[33m\"\u001b[39m, tmin_clip.shape)\n\u001b[32m     23\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mBandas:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[38;5;28mlist\u001b[39m(tmin_clip.band.values))\n",
+      "\u001b[31mNameError\u001b[39m: name 'tmin_clip_path' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import rioxarray\n",
+    "import geopandas as gpd\n",
+    "import os\n",
+    "\n",
+    "# 1️⃣ Aseguramos que ambos (raster y shapefile) estén en el mismo CRS\n",
+    "if dist.crs != tmin.rio.crs:\n",
+    "    dist = dist.to_crs(tmin.rio.crs)\n",
+    "    print(\"Shapefile reproyectado al CRS del raster:\", dist.crs)\n",
+    "    \n",
+    "# 2️⃣ Creamos un polígono único de todo el país (para eficiencia)\n",
+    "peru = dist[['GEOMETRY']].dissolve()\n",
+    "print(\"✅ Geometría de Perú generada\")\n",
+    "\n",
+    "# 3️⃣ Recorte del raster (todas las bandas)\n",
+    "tmin_dist = tmin.rio.clip(peru.geometry, peru.crs, drop=True)\n",
+    "\n",
+    "# 5️⃣ Guardar resultado\n",
+    "tmin_dist_path = \"data/processed/tmin_dist_clip.tif\"\n",
+    "tmin_dist.rio.to_raster(tmin_dist_path)\n",
+    "\n",
+    "print(f\"✅ Raster recortado guardado en: {tmin_clip_path}\")\n",
+    "print(\"Dimensiones:\", tmin_dist.shape)\n",
+    "print(\"Bandas:\", list(tmin_dist.band.values))\n",
+    "print(\"CRS:\", tmin_dist.rio.crs)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b92da6f4-f7a3-4b5b-bb8c-8415f1f5d034",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import rioxarray\n",
+    "import geopandas as gpd\n",
+    "import os\n",
+    "\n",
+    "# 1️⃣ Aseguramos que ambos (raster y shapefile) estén en el mismo CRS\n",
+    "if dist.crs != tmin.rio.crs:\n",
+    "    dist = dist.to_crs(tmin.rio.crs)\n",
+    "    print(\"♻️ Shapefile reproyectado al CRS del raster:\", dist.crs)\n",
+    "\n",
+    "# 2️⃣ Creamos un polígono único de todo el país (para eficiencia)\n",
+    "peru = dist[['geometry']].dissolve()\n",
+    "print(\"✅ Geometría de Perú generada\")\n",
+    "\n",
+    "# 3️⃣ Recorte del raster (todas las bandas)\n",
+    "tmin_clip = tmin.rio.clip(peru.geometry, peru.crs, drop=True)\n",
+    "\n",
+    "# 4️⃣ Crear carpeta destino si no existe\n",
+    "os.makedirs(\"data/processed\", exist_ok=True)\n",
+    "\n",
+    "# 5️⃣ Guardar resultado\n",
+    "tmin_clip_path = \"data/processed/tmin_peru_clip.tif\"\n",
+    "tmin_clip.rio.to_raster(tmin_clip_path)\n",
+    "\n",
+    "print(f\"✅ Raster recortado guardado en: {tmin_clip_path}\")\n",
+    "print(\"Dimensiones:\", tmin_clip.shape)\n",
+    "print(\"Bandas:\", list(tmin_clip.band.values))\n",
+    "print(\"CRS:\", tmin_clip.rio.crs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4d49f7-659d-4258-9e63-4681844e921f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c19073b6-c545-4372-ac76-6d684ec6a74a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e56e829-3c7b-4545-88e8-31676252ac48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "af281a8f-eb65-4ab3-aa56-b48ce97896ff",
    "metadata": {},
